# ffmpeg_desktop

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  agent.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.agents/docs/: FFmpegFreeUI-项目开发文档.md  业务操作手册.md  代码审查报告.md  前端结构规范.md  页面布局复刻文档.md
.agents/rules/: superpowers-zh.md
.gitee/workflows/: release.yml
.github/scripts/: prepare-tauri-signing-key.sh
.github/workflows/: build-linux.yml  build-windows.yml  release.yml
docs/: 功能对比清单.md  项目完成报告.md
e2e/: app-smoke.spec.ts  settings.spec.ts
scripts/: assert-csp-safe-build.mjs  bump-version.mjs  generate-test-report.sh  generate-updater-manifest.mjs  icon.sh  preflight.sh  release-all.sh  release-gitee.sh  upload-gitee-assets.sh  upload-github-assets.sh
src/: App.vue  main.ts  vite-env.d.ts
src-tauri/: CONFIG_README.md  Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/config/: codec.json  ffmpeg-settings.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: ffmpeg_tools.rs  ffplay.rs  file_commands.rs  independent_panel.rs  legacy_executor.rs  mod.rs  performance.rs  startup_args.rs  tray_settings.rs  video_preview.rs
src-tauri/src/modules/: menus.rs  mod.rs  preset_manager.rs  task_manager.rs  tray.rs  windows.rs
src-tauri/src/utility/: _constant.rs  _executor.rs  mod.rs
test-reports/: TEST_REPORT.md
(+163 files in other folders)
