[package]
name = "FFmpeg_Desktop"
version = "0.1.5"
description = "FFmpeg_Desktop"
authors = ["caoyuee"]
edition = "2021"

[lib]
name = "tauri_ffmpeg_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = ["config-json5"] }

[dependencies]
tauri = { version = "2.9.1", features = ["config-json5", "tray-icon", "devtools"] }
tauri-plugin-opener = "2.5.2"
tauri-plugin-dialog = "2.5.0"
tauri-plugin-fs = "2"
tauri-plugin-pinia = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4.41"
once_cell = "1.21.3"
nix = { version = "0.27", features = ["signal", "sched"] }
windows-sys = { version = "0.60.2", features = ["Win32_System_Threading"] }
regex = "1.11"
shell-words = "1.1"
uuid = { version = "1.16", features = ["v4", "serde"] }
base64 = "0.22"
sysinfo = "0.33"
filetime = "0.2"

[dev-dependencies]
mockall = "0.11"
tempfile = "3.8"
